--- a/style.css
+++ b/style.css
@@ -1,36 +1,54 @@
-body{
-    background-color: blanchedalmond;
+body
+{
+    background-color: rgb(50, 50, 50);
+    margin: 0;
+    padding: 0;
 }
 
-h1{
-    color: black;
-    text-align: center;
-}
-
-h2{
-    margin-left: 30px;
-    font-size: 30px;
-}
-
-h3{
-    margin-left: 30px;
-    font-size: 26px;
-}
-
-p{
-    text-align: justify;
-    margin-left: 30px;
-    margin-right: 30px;
-    font-size: 20px;
-}
-
-ul{
-    margin-left: 30px;
-    font-size: 20px;
-}
-video{
+video
+{
+    width: 100%;
     aspect-ratio: 16/9;
-    width: 1000px;
-    margin-left: 16%;
 }
 
+.navbar
+{
+    background-color: rgba(255, 255, 255, 0.8);
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+}
+
+.navbar h1
+{
+    justify-self: center;
+}
+
+.navbar ul
+{
+    display: flex;
+    list-style: none;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: flex-start;
+    margin-block: 0;
+    padding-inline: 0;
+}
+
+.navbar li
+{
+    padding: 3% 3%;
+}
+
+.navbar a
+{
+    color: black;
+    text-decoration: none;
+}
+
+.info
+{
+    background-color: rgb(244, 215, 151);
+    margin: 10%;
+    padding: 1% 3%;
+}
