--- a/style.css
+++ b/style.css
@@ -1,82 +1,106 @@
-body
-{
-    background-color: rgb(255, 255, 255);
-    margin: 0;
-    padding: 0;
-    padding-top: 100px;
+body {
+  background-color: rgb(0, 0, 0);
+  padding-top: 10%;
+  margin: 0;
 }
 
-header
-{
-    width: 100%;
+header {
+  width: 100%;
+}
+header .navbar {
+  position: fixed;
+  width: 100%;
+  height: fit-content;
+  background-color: rgb(56, 56, 56);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  top: 0;
+}
+header .navbar h1 {
+  align-self: center;
+  justify-self: center;
+  margin-left: 15%;
+  color: rgb(0, 190, 22);
+}
+header .navbar ul {
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  margin-block: 0;
+  padding-inline: 0;
+}
+header .navbar li {
+  padding: 3% 3%;
+}
+header .navbar a {
+  color: rgb(0, 190, 22);
+  text-decoration: none;
 }
 
-.navbar
-{
-    position: fixed;
-    width: 100%;
-    background-color: rgb(190, 237, 249);
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    top: 0;
+.banner {
+  display: flex;
+  background-color: rgb(0, 0, 0);
+  justify-content: center;
+}
+.banner img {
+  max-height: 200px;
+  min-height: 50px;
 }
 
-.navbar h1
-{
-    justify-self: center;
-    margin: 0.5rem;
+.info {
+  margin: 2.5% 7.5%;
+  padding: 2.5% 7.5%;
+  background-color: rgb(22, 27, 23);
+  border-radius: 1.5rem;
+}
+.info h2 {
+  color: rgb(0, 190, 22);
+}
+.info p {
+  color: rgb(255, 255, 255);
+  text-align: justify;
+}
+.info li {
+  color: rgb(255, 255, 255);
 }
 
-.navbar ul
-{
-    display: flex;
-    list-style: none;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-content: center;
-    justify-content: center;
-    margin-block: 0;
-    padding-inline: 0;
+.video {
+  width: 75%;
+  aspect-ratio: 16/9;
+  justify-self: center;
+  margin: 3%;
 }
 
-.navbar li
-{
-    padding: 3% 3%;
+footer {
+  margin: 2.5% 7.5%;
+  padding: 2.5% 7.5%;
+  border-radius: 1.5rem;
+  background-color: rgb(22, 27, 23);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+footer h3 {
+  width: 100%;
+  text-align: center;
+  color: rgb(0, 190, 22);
+}
+footer .anim-box {
+  margin: 1.5%;
+  width: 150px;
+  height: 150px;
+  border-radius: 15px;
+  align-content: center;
+  background-color: rgb(56, 56, 56);
+}
+footer .anim-box h4 {
+  color: rgb(0, 190, 22);
+  justify-self: center;
+  transition: all 0.5 ease;
 }
 
-.navbar a
-{
-    color: black;
-    text-decoration: none;
-}
-
-.banner
-{
-    display: flex;
-    background-color: black;
-    justify-content: center;
-    
-}
-.banner img
-{
-    max-height: 200px;
-    min-height: 50px;
-}
-
-.info
-{
-    margin: 50px 15%;
-}
-
-.info p
-{
-    text-align: justify;
-}
-
-.video
-{
-    width: 75%;
-    aspect-ratio: 16/9;
-    justify-self: center;
-    margin: 3%;
-}
+/*# sourceMappingURL=style.css.map */
