--- a/style.css
+++ b/style.css
@@ -96,11 +96,20 @@ footer .anim-box {
   border-radius: 15px;
   align-content: center;
   background-color: rgb(56, 56, 56);
+  transition: background-color 0.5s ease, background-image 0.5s ease;
 }
 footer .anim-box h4 {
   color: rgb(0, 190, 22);
   justify-self: center;
-  transition: all 0.5 ease;
+  transition: color 0.5s ease;
+}
+footer .anim-box:hover {
+  /* queria cambiar el fondo por una imagen la cual quiero definir en el html mediante href, pero no funciona como esperaba
+  background-image: url(href);*/
+  background-size: cover;
+}
+footer .anim-box:hover h4 {
+  color: rgba(0, 0, 0, 0);
 }
 
 /*# sourceMappingURL=style.css.map */
